# Practica-IA

./: README.md  flake.nix  pyproject.toml
src/practica1/: __init__.py  ontologia.py  sistema_experto.py  sistema_logica_difusa.py  traductor_ontologia.py
