[project]
name = "practica1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "experta>=1.9.4",
    "owlrl>=7.1.4",
    "rdflib>=7.1.4",
]

[project.scripts]
practica1 = "practica1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
