[project]
name = "practica1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "experta>=1.9.4",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "owlrl>=7.1.4",
    "packaging>=25.0",
    "rdflib>=7.1.4",
    "scikit-fuzzy>=0.5.0",
    "scipy>=1.16.2",
]

[project.scripts]
practica1 = "practica1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
